Make a basic User model (including secure passwords)

--- a/app/views/layouts/_side.html.erb
+++ b/app/views/layouts/_side.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
     <div class="left">
-        <p>自分の本棚</p>
+        <p><%= link_to "自分の本棚", root_path %></p>
         <p>他人の本棚</p>
     </div>
