--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "自分の本棚") %>
     <div class="right">
         <div class="right_top">
             <p>自分の本棚</p>
