--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, '新規登録') %>
 <div class="right">
         <div class="right_top">
             <p>自分の本棚</p>
