--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,11 @@
         <nav class="header_nav">
             <ul class="header_list">
                 <li class="header_item"><%= link_to "新規登録", signup_path, class: "header_link" %></li>
-                <li class="header_item"><%= link_to "ログイン", '#', class: "header_link" %></li>
+                <% if logged_in? %>
+                  <li class="header_item"><%= link_to "ログアウト", logout_path, method: :delete, class: "header_link" %></li>
+                <% else %>
+                  <li class="header_item"><%= link_to "ログイン", login_path, class: "header_link" %></li>
+                <% end %>
             </ul>
         </nav>
     </div>
