--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -42,7 +42,11 @@ img {
 
 a {
   cursor: pointer;
-  text-decoration: none;
+
+}
+
+.hover :hover{
+  opacity: 0.7;
 }
 
 /*===================================
@@ -67,6 +71,10 @@ body{
 a{
   text-decoration: none;
   color: black;
+  
+  &:hover{
+    opacity: 0.5;
+  }
 }
 
 img{
@@ -104,10 +112,6 @@ img{
 }
 .header_list{
     display: flex;
-
-    &:hover{
-        font-weight: bold;
-    }
 }
 .header_item{
 
@@ -138,14 +142,35 @@ img{
     border-right: 1px solid black;
     background-color: $main-color;
 
-    p{
-        height: 60px;
-        width: 200px;
-        padding-left: 40px;
-        line-height: 60px;
-        border: 1px solid black;
-        background-color: $main-color;
-    }
+}
+
+.mypage{
+  display:inline-block;
+  border: 1px solid black;
+  background-color: $main-color;
+  height: 60px;
+  width: 200px;
+  padding-left: 40px;
+  line-height: 60px;
+  
+  
+  &:hover{
+    opacity: 0.7;
+  }
+}
+
+.form{
+  padding: 50px 100px;
+}
+
+.btn-primary{
+  display: block;
+  width: 100px;
+  margin: 30px auto;
+  
+  &:hover{
+    opacity: 0.7;
+  } 
 }
 /*===================================
 # right
